moved dashboard concept to home instead

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,92 +5,15 @@
     android:layout_height="match_parent"
     tools:context="me.kristhecanadian.gooutside.ui.dashboard.DashboardFragment">
 
-
     <TextView
-        android:id="@+id/lets_go_exp"
-        android:layout_width="160dp"
-        android:layout_height="24dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="32dp"
-        android:fontFamily="sans-serif-black"
-        android:gravity="top"
-        android:text="@string/lets_go_exp"
-        android:textAppearance="@style/lets_go_exp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.18"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/lets_go_exp2"
-        android:layout_width="160dp"
-        android:layout_height="24dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="top"
-        android:text="@string/go_outside"
-        android:textAppearance="@style/lets_go_exp"
-        app:layout_constraintBottom_toTopOf="@+id/lets_go_exp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="318dp"
-        android:layout_height="503dp"
-        android:contentDescription="TODO"
-        android:src="@mipmap/houses"
+        android:id="@+id/textdashboard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.90999997" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="324dp"
-        android:layout_height="48dp"
-        android:autofillHints=""
-        android:background="@drawable/search"
-        android:ems="10"
-        android:fontFamily="sans-serif-black"
-        android:inputType="textPersonName"
-        android:text="@string/search_for_adventures"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29000002" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="56dp"
-        android:layout_height="76dp"
-        android:layout_marginBottom="45dp"
-        android:src="@mipmap/logo"
-        app:layout_constraintBottom_toTopOf="@+id/lets_go_exp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="45dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="8dp"
-        android:src="@mipmap/badge"
-        app:layout_constraintBottom_toTopOf="@+id/lets_go_exp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.753"
-        app:layout_constraintStart_toEndOf="@+id/lets_go_exp2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22000003" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
